--- a/day11/script.ipynb
+++ b/day11/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,34 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "123"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def breakDownNumber(number, divider):\n",
-    "    modulo = lcm(*[divider, 10, 10, 10, 10, 10, 10])\n",
-    "    temp = number % modulo\n",
-    "    modulo = lcm(*[divider, 10, 10, 10])\n",
-    "    return temp % modulo\n",
-    "\n",
-    "\n",
-    "breakDownNumber(123, 13)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,33 +33,25 @@
     "    def __str__(self):\n",
     "        return \"Affe \" + str(self.name) + \": [\"+\", \".join(list(map(lambda x: str(x), self.startingItems)))+\"],trueTarget:\"+str(self.trueTarget)+\",falseTarget:\"+str(self.falseTarget)+ \", divider:\"+str(self.testDivider)\n",
     "\n",
-    "\n",
-    "    \n",
-    "    def __evaluate__(self, superDivider):\n",
-    "        #print(self)\n",
+    "    def __evaluate__(self, superDivider, monkeys):\n",
     "        result = []\n",
     "        while len(self.startingItems) > 0:\n",
     "            self.inspectionCount += 1\n",
     "            inspectedItem = self.startingItems.pop(0)\n",
-    "            operation = self.operation.replace(\"old\", str(inspectedItem))\n",
-    "            itemAfterInspection = eval(operation)\n",
-    "            optimisedItem = itemAfterInspection % (superDivider * 15)\n",
-    "            optimisedItem = optimisedItem % superDivider\n",
-    "            optimisedItem = optimisedItem % self.testDivider * 100\n",
-    "            # optimisedItem = optimisedItem % self.testDivider * 100\n",
-    "            # optimisedItem = optimisedItem % self.testDivider * 10\n",
-    "            if optimisedItem % self.testDivider == 0:\n",
-    "                result+= [(self.trueTarget, itemAfterInspection)]\n",
+    "            itemAfterInspection = self.operation(inspectedItem)\n",
+    "            itemAfterInspection = itemAfterInspection % superDivider\n",
+    "            if itemAfterInspection % self.testDivider == 0:\n",
+    "                monkeys[self.trueTarget].__addItem__(itemAfterInspection)\n",
     "            else:\n",
-    "                result+= [(self.falseTarget, itemAfterInspection)]\n",
+    "                monkeys[self.falseTarget].__addItem__(itemAfterInspection)\n",
     "        return result\n",
     "    \n",
     "    def __addItem__(self, addedItem):\n",
-    "        self.startingItems += [addedItem]\n",
+    "        self.startingItems.append(addedItem)\n",
     "\n",
     "def createMonkey(input, index):\n",
     "    startingItems = [int(item) for item in input[1].split(\": \")[1].split(\", \")]\n",
-    "    operation = input[2].split(\" = \")[1]\n",
+    "    operation = eval(\"lambda old: \" + input[2].split(\" = \")[1])\n",
     "\n",
     "    testDivider = int(input[3].split(\" \")[-1])\n",
     "    trueTarget = int(input[4].split(\" \")[-1])\n",
@@ -103,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,59 +81,56 @@
     "        currentMonkey = []\n",
     "    else:\n",
     "        currentMonkey += [line]\n",
-    "monkeys += [createMonkey(currentMonkey, len(monkeys))]\n",
-    "#for monkey in monkeys:\n",
-    "    #print(monkey)"
+    "monkeys += [createMonkey(currentMonkey, len(monkeys))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Round 0\n",
-      "Round 10\n",
-      "Round 20\n",
-      "Round 30\n",
-      "Round 40\n"
-     ]
-    }
-   ],
-   "source": [
-    "numberOfRounds = 10000\n",
-    "import numpy as np\n",
-    "\n",
-    "superDivider = lcm(*list(map(lambda x: x.testDivider, monkeys)))\n",
-    "\n",
-    "for roundIndex in range(0, numberOfRounds):\n",
-    "    if(roundIndex % 10 == 0):\n",
-    "        print(\"Round \"+str(roundIndex))\n",
-    "    for monkey in monkeys:\n",
-    "        items = monkey.__evaluate__(superDivider)\n",
-    "        #print(items)\n",
-    "        for item in items:\n",
-    "            monkeys[item[0]].__addItem__(item[1])\n",
-    "    #print(\"Round\" + str(roundIndex))\n",
-    "    #for monkey in monkeys:\n",
-    "        #print(monkey)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[59, 210, 126, 213, 156, 141, 1, 217]"
+       "9699690"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "superDivider = lcm(*list(map(lambda x: x.testDivider, monkeys)))\n",
+    "superDivider"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numberOfRounds = 10000\n",
+    "import numpy as np\n",
+    "\n",
+    "for roundIndex in range(0, numberOfRounds):\n",
+    "    for monkey in monkeys:\n",
+    "        monkey.__evaluate__(superDivider, monkeys)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10659, 70776, 73630, 109098, 106461, 62841, 61442, 50365]"
+      ]
+     },
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,28 +143,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12390"
+       "11614682178"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.prod(counts[0:2])"
+    "counts.sort(reverse=True)\n",
+    "counts[0]*counts[1]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 ('env': venv)",
+   "display_name": "Python 3.10.7 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -216,12 +179,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c0a575b28c7c1df656a989138699ecb3424269a3c271342f35427e81e944082d"
+    "hash": "833c93eabc404843b275b71ee0d34f250440e7b690ea9f5161128103de38f0bc"
    }
   }
  },
