--- a/day12/script.ipynb
+++ b/day12/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
        "[41 rows x 70 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,23 +1220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 20)path: [], cost:0, height:0, letter: S\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "352"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,24 +1240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(46, 20)path: [], cost:0, height:25, letter: E\n",
-      "(46, 20)path: [], cost:0, height:25, letter: E\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "(345, 352)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
