--- a/day15/script.ipynb
+++ b/day15/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "4737567"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,38 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SENSOR CHECK1:  5 5 2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{(2, 5),\n",
-       " (3, 4),\n",
-       " (3, 6),\n",
-       " (4, 3),\n",
-       " (4, 7),\n",
-       " (5, 2),\n",
-       " (5, 8),\n",
-       " (6, 3),\n",
-       " (6, 7),\n",
-       " (7, 4),\n",
-       " (7, 6),\n",
-       " (8, 5)}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from functools import reduce\n",
     "\n",
@@ -1404,7 +1375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
