--- a/day20/script.ipynb
+++ b/day20/script.ipynb
@@ -2,106 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"test-input.txt\") as f:\n",
+    "#Task Switch Zone\n",
+    "rounds = 1\n",
+    "rounds = 10\n",
+    "decryptionKey = 1\n",
+    "decryptionKey = 811589153\n",
+    "#Task Switch Zone End\n",
+    "\n",
+    "with open(\"input.txt\") as f:\n",
     "    lines = list(map(lambda x: int(x.strip()), f.readlines()))\n",
-    "    lines = [(line, False) for line in lines]"
+    "zeroStartIndex = lines.index(0)\n",
+    "lines = [(lines[startIndex], startIndex) for startIndex in range(0, len(lines))]\n",
+    "startingLines = [line for line in lines]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getNewIndex(index, movement, list_length):\n",
-    "    newIndex = index + movement\n",
-    "    while newIndex<0:\n",
-    "        newIndex += list_length\n",
-    "    while newIndex>(list_length-1):\n",
-    "        newIndex -= list_length\n",
+    "def getNewIndex(index, movement, list_length, numberOfMissingItemsInList, multiplier):\n",
+    "    moveBy = list_length-numberOfMissingItemsInList\n",
+    "    multiplier = multiplier % moveBy\n",
+    "    newIndex = index + movement * multiplier\n",
+    "    while newIndex<= list_length-1:\n",
+    "        newIndex += moveBy * multiplier\n",
+    "    newIndex = newIndex % moveBy\n",
     "    return newIndex\n",
     "\n",
     "def moveItem(index, newIndex, list):\n",
+    "    value = list[index][0]\n",
     "    listBefore, listAfter, shiftedItems = [],[],[]\n",
     "    if newIndex > index:\n",
     "        listBefore = list[0:index]\n",
     "        listAfter = list[newIndex+1:]\n",
     "        shiftedList = list[index+1:newIndex+1]\n",
-    "        return listBefore+shiftedList+[(list[index][0], True)]+listAfter\n",
+    "        return listBefore+shiftedList+[list[index]]+listAfter\n",
     "    if newIndex < index:\n",
     "        listBefore = list[0:newIndex]\n",
     "        listAfter = list[index+1:]\n",
     "        shiftedList = list[newIndex:index]\n",
-    "        return listBefore+[(list[index][0], True)]+shiftedList+listAfter\n",
-    "    list[index] = (list[index][0], True)\n",
-    "    return list\n",
-    "        "
+    "        return listBefore+[list[index]]+shiftedList+listAfter\n",
+    "    result = list[0:index]+[list[index]]+list[index+1:]\n",
+    "    return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for round in range(0,rounds):\n",
+    "    for i in range(0, len(startingLines)):\n",
+    "        item = startingLines[i]\n",
+    "        currentItemIndex = lines.index(item)\n",
+    "        newItemIndex = getNewIndex(index=currentItemIndex, movement=lines[currentItemIndex][0], list_length=len(lines), numberOfMissingItemsInList=1, multiplier=decryptionKey)\n",
+    "        lines = moveItem(index=currentItemIndex, newIndex=newItemIndex, list=lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zeroIndex = lines.index(startingLines[zeroStartIndex])\n",
+    "linesAfter0 = lines[zeroIndex:]+lines[:zeroIndex]\n",
+    "\n",
+    "firstNumber = linesAfter0[getNewIndex(index = 0, movement = 1000, list_length = len(linesAfter0), numberOfMissingItemsInList=0, multiplier=1)][0]\n",
+    "secondNumber = linesAfter0[getNewIndex(index = 0, movement = 2000, list_length = len(linesAfter0), numberOfMissingItemsInList=0, multiplier=1)][0]\n",
+    "thirdNumber = linesAfter0[getNewIndex(index = 0, movement = 3000, list_length = len(linesAfter0), numberOfMissingItemsInList=0, multiplier=1)][0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 [(1, False), (2, False), (-3, False), (3, False), (-2, False), (0, False), (4, False)]\n",
-      "MOVE (1, False) AT 0 TO 1\n",
-      "0 [(2, False), (1, True), (-3, False), (3, False), (-2, False), (0, False), (4, False)]\n",
-      "MOVE (2, False) AT 0 TO 2\n",
-      "0 [(1, True), (-3, False), (2, True), (3, False), (-2, False), (0, False), (4, False)]\n",
-      "1 [(1, True), (-3, False), (2, True), (3, False), (-2, False), (0, False), (4, False)]\n",
-      "MOVE (-3, False) AT 1 TO 5\n",
-      "1 [(1, True), (2, True), (3, False), (-2, False), (0, False), (-3, True), (4, False)]\n",
-      "2 [(1, True), (2, True), (3, False), (-2, False), (0, False), (-3, True), (4, False)]\n",
-      "MOVE (3, False) AT 2 TO 5\n",
-      "2 [(1, True), (2, True), (-2, False), (0, False), (-3, True), (3, True), (4, False)]\n",
-      "MOVE (-2, False) AT 2 TO 0\n",
-      "2 [(-2, True), (1, True), (2, True), (0, False), (-3, True), (3, True), (4, False)]\n",
-      "3 [(-2, True), (1, True), (2, True), (0, False), (-3, True), (3, True), (4, False)]\n",
-      "MOVE (0, False) AT 3 TO 3\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[(-2, True),\n",
-       " (1, True),\n",
-       " (2, True),\n",
-       " (0, False),\n",
-       " (-3, True),\n",
-       " (3, True),\n",
-       " (4, False)]"
+       "6146976244822"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "index = 0\n",
-    "counter = 0\n",
-    "while index < len(lines):\n",
-    "    counter+=1\n",
-    "    if counter == 10:\n",
-    "        break\n",
-    "    print(index, lines)\n",
-    "    if not lines[index][1]:\n",
-    "        newIndex =getNewIndex(index=index, movement=lines[index][0], list_length=len(lines))\n",
-    "        print(\"MOVE\", lines[index], \"AT\", index, \"TO\", newIndex)\n",
-    "        lines = moveItem(index=index, newIndex=newIndex, list=lines)\n",
-    "    else:\n",
-    "        index+=1\n",
-    "\n",
-    "lines\n"
+    "(firstNumber + secondNumber + thirdNumber)*decryptionKey"
    ]
   }
  ],
@@ -121,12 +118,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c0a575b28c7c1df656a989138699ecb3424269a3c271342f35427e81e944082d"
+    "hash": "833c93eabc404843b275b71ee0d34f250440e7b690ea9f5161128103de38f0bc"
    }
   }
  },
