--- a/day20/script.ipynb
+++ b/day20/script.ipynb
@@ -118,12 +118,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.6 (v3.9.6:db3ff76da1, Jun 28 2021, 11:49:53) \n[Clang 6.0 (clang-600.0.57)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "833c93eabc404843b275b71ee0d34f250440e7b690ea9f5161128103de38f0bc"
+    "hash": "c0a575b28c7c1df656a989138699ecb3424269a3c271342f35427e81e944082d"
    }
   }
  },
