--- a/day22/script.ipynb
+++ b/day22/script.ipynb
@@ -69,8 +69,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "def rotate(directions, currentDirection, rotationDirection):\n",
     "\n",
     "    currentIndex = directions.index(currentDirection)\n",
@@ -79,16 +77,22 @@
     "    else:\n",
     "        return directions[(currentIndex+1)%len(directions)]\n",
     "\n",
+    "def wrapTask1(current, direction):\n",
+    "    tempDirection = multiplyTuples(direction, (-1,-1))\n",
+    "    nextPotentialPosition = current\n",
+    "    while True:\n",
+    "        tempNextPotentialPosition = addTuples(nextPotentialPosition, tempDirection)\n",
+    "        if tempNextPotentialPosition not in tiles and tempNextPotentialPosition not in walls:\n",
+    "            return nextPotentialPosition\n",
+    "        nextPotentialPosition = tempNextPotentialPosition\n",
+    "    \n",
+    "def wrapTask2(current, direction):\n",
+    "    \n",
+    "\n",
     "def getNextPosition(current, direction, tiles, walls):\n",
     "    nextPotentialPosition = addTuples(current, direction)\n",
     "    if nextPotentialPosition not in tiles and nextPotentialPosition not in walls:\n",
-    "        tempDirection = multiplyTuples(direction, (-1,-1))\n",
-    "        nextPotentialPosition = current\n",
-    "        while True:\n",
-    "            tempNextPotentialPosition = addTuples(nextPotentialPosition, tempDirection)\n",
-    "            if tempNextPotentialPosition not in tiles and tempNextPotentialPosition not in walls:\n",
-    "                break\n",
-    "            nextPotentialPosition = tempNextPotentialPosition\n",
+    "            nextPotentialPosition = wrapTask1(current, direction)\n",
     "    if nextPotentialPosition in walls: return current\n",
     "    else: return nextPotentialPosition\n",
     "\n",
@@ -46683,8 +46687,6 @@
    "source": [
     "import re\n",
     "\n",
-    "\n",
-    "\n",
     "def task1(tiles, walls, directions):\n",
     "    instructions = re.findall(\"([\\d]+|R|L)\", lines[-1].strip())\n",
     "    instructions\n",
@@ -46722,7 +46724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (v3.9.6:db3ff76da1, Jun 28 2021, 11:49:53) \n[Clang 6.0 (clang-600.0.57)]"
   },
   "orig_nbformat": 4,
   "vscode": {
